fix(dashboard): Adiciona HTML e CSS do dashboard financeiro - Cria dashboard-financeiro.css com estilos específicos - Cria dashboard-financeiro-template.js para injetar HTML - Adiciona link CSS e script template no index.html - Dashboard financeiro agora visível na interface

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="dashboard-financeiro.css">
 </head>
 <body>
     <div id="app" style="opacity: 0;">
@@ -357,6 +358,7 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="dashboard-financeiro-template.js"></script>
     <script src="financeiro.js"></script>
     <script src="dashboard-financeiro.js"></script>
     <script src="supabase-client.js"></script>
